--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00587C</color>
-    <color name="colorPrimaryDark">#00435C</color>
-    <color name="colorAccent">#FF9E00</color>
+    <color name="colorPrimary">#093EA2</color>
+    <color name="colorPrimaryDark">#00205A</color>
+    <color name="colorAccent">#F15623</color>
     <color name="background">#F5F5F5</color>
+
+    <color name="blue_light_secondary">#3074F2</color>
+    <color name="orange_strong">#F15623</color>
+    <color name="orange_highlight">#FF7A4F</color>
+    <color name="yellow_sistem">#FF9500</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_light">#9FA9B2</color>
+    <color name="gray_strong">#495057</color>
 </resources>
