--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_light">#9FA9B2</color>
     <color name="gray_strong">#495057</color>
+
+    <color name="transparent">#00000000</color>
 </resources>
